2009-05-12  Mike Kestner  <mkestner@novell.com>

	* glib/ValueArray.cs: make ctor(IntPtr) public for binding usage. 
	[Fixes #503189] Patch by Sebastian Dröge.

2009-05-12  Mike Kestner  <mkestner@novell.com>

	* gtk/Application.cs: add the theme initialization workaround for 
	windows.  Hopefully we can find a better solution that doesn't
	involve loading SWF.  [Fixes #471682]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* gtk/RadioMenuItem.custom: implement subclassing for group/label 
	ctor.  [Fixes #320971]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* gtk/PaperSize.custom: add static props for Letter and the other
	named papers.  [Fixes #324687]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* glib/Idle.cs: add a Remove overload for consistency.
	* glib/Timeout.cs: add a Remove overload for consistency.
	[Fixes #356138]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* generator/EnumGen.cs: support 1L long values or explicit types.

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: null-term array marshaling for vms.
	* generator/VirtualMethod.cs: use ToNative return type in native 
	callbacks.
	[Fixes #501294] Patch by Sebastian Dröge.

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* generator/FieldBase.cs: mangle compound typenames for glue.
	[Fixes #501329] Patch by Sebastian Dröge.

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* generator/VirtualMethod.cs: refactoring to reuse retval prop.
	[Fixes #501307] Patch by Sebastian Dröge.

2009-05-05  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: ensure threading is initialized in cctor.
	* gtk/Application.cs: ditto.

2009-05-04  Christian Hoff  <christian_hoff@gmx.net>

	* generator/ClassField.cs: Derive from StructField.
	* generator/ObjectBase.cs: Implement validation mechanism for
	class structures. If the structure contains bitfields or fields
	of unknown types, we cannot generate it in managed code.