@@ -1,5 +1,10 @@
 2009-05-12  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Value.cs: explicit exception for unknown props.
+	[Fixes #502043] Patch by Sebastian Dröge.
+
+2009-05-12  Mike Kestner  <mkestner@novell.com>
+
 	* glib/ValueArray.cs: make ctor(IntPtr) public for binding usage. 
 	[Fixes #503189] Patch by Sebastian Dröge.
 
